<resources>
    <string name="app_name">CricFan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Player">Player</string>
    <string name="match_info"> Match Info</string>
    <string name="last_match"> Last</string>
    <string name="last_2"> 2nd Last</string>
    <string name="last_3"> 3rd Last</string>
    <string name="last_4">4th Last</string>
    <string name="name">Player Name</string>
    <string name="age">Age</string>
    <string name="player_role">Player Role</string>
</resources>
