<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context=".Player">

    <TableLayout
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_column="6"
                android:text="@string/name" />

            <TextView
                android:id="@+id/textView19"
                android:layout_column="7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_role" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <TableRow>

            <TextView
                android:id="@+id/pview1"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/match_info"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/pview2"
                android:layout_column="2"
                android:padding="3dip"
                android:text="@string/last_match"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/pview3"
                android:layout_column="3"
                android:padding="3dip"
                android:text="@string/last_2"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/pview4"
                android:layout_column="4"
                android:padding="3dip"
                android:text="@string/last_3"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_4"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="Run" android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/textView10"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Balls"
                android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow>


            <TextView
                android:id="@+id/textView11"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4s"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView12"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6s" android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView13"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wickets"
                android:textColor="@android:color/black"/>
        </TableRow>

    </TableLayout>
</RelativeLayout>